# zomato-dispatcher-env

./: .dockerignore  Dockerfile  README.md  __init__.py  baseline_scores.json  client.py  grader.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_local.py
server/: __init__.py  __main__.py  app.py  environment.py
tests/: test_environment.py
